CSS fixes for titles on mobile

--- a/_sass/components/_section.scss
+++ b/_sass/components/_section.scss
@@ -74,10 +74,14 @@
 
 		@include breakpoint(small) {
 			&.major {
+				width: auto;
 				> p {
 					br {
 						display: none;
 					}
+				}
+				> h1 {
+					word-wrap: break-word;
 				}
 			}
 		}
